make language detector

--- a/dataset_builder.ipynb
+++ b/dataset_builder.ipynb
@@ -173,20 +173,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 134,
    "outputs": [
     {
      "data": {
-      "text/plain": "                                                   text language\n0        ভালবাসার গল্প পড়তে এই পেইজে লাইক দেন বন্ধুত্ব    bangla\n1                         আমার অভিনিত অভিনয়ে সুযোগ চাই    bangla\n2                 না বলা ভালোবাসা কিন্তু খুবই ভাল পোলা    bangla\n3                         আবারও লেট হয়ছে মিনিট সেকেন্ড    bangla\n4      জগন্নাথের শিক্ষার্থীরা এটা মেনে নিবে না। এটা ...   bangla\n...                                                 ...      ...\n2293                            Your money or your life  english\n2294                                   Your name is mud  english\n2295                        You've never had it so good  english\n2296                                     Zero tolerance  english\n2297                                            Zig-zag  english\n\n[154677 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>language</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ভালবাসার গল্প পড়তে এই পেইজে লাইক দেন বন্ধুত্ব</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>আমার অভিনিত অভিনয়ে সুযোগ চাই</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>না বলা ভালোবাসা কিন্তু খুবই ভাল পোলা</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>আবারও লেট হয়ছে মিনিট সেকেন্ড</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>জগন্নাথের শিক্ষার্থীরা এটা মেনে নিবে না। এটা ...</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2293</th>\n      <td>Your money or your life</td>\n      <td>english</td>\n    </tr>\n    <tr>\n      <th>2294</th>\n      <td>Your name is mud</td>\n      <td>english</td>\n    </tr>\n    <tr>\n      <th>2295</th>\n      <td>You've never had it so good</td>\n      <td>english</td>\n    </tr>\n    <tr>\n      <th>2296</th>\n      <td>Zero tolerance</td>\n      <td>english</td>\n    </tr>\n    <tr>\n      <th>2297</th>\n      <td>Zig-zag</td>\n      <td>english</td>\n    </tr>\n  </tbody>\n</table>\n<p>154677 rows × 2 columns</p>\n</div>"
+      "text/plain": "                                                     text      language\n0        Tmr barite barate asa kono loker kisu jodi tm...  anglo-bangla\n1        আপনাদের যদি প্রশ্ন করা হয়। সে প্রশ্নের উত্তর ...        bangla\n2       Some choices are better than others and we, as...       english\n3        আজ তারিখের প্রথম আলো পত্রিকা কি এর বিজ্ঞাপন এ...        bangla\n4        আমাদের দেশে পাইলে বুঝায় দিতাম বাংঙ্গালী কি জি...        bangla\n...                                                   ...           ...\n154672                        ami to taim e bolte parina   anglo-bangla\n154673   এই মাগীডারে ভালো ভেবেছিলাম জানতাম সে জীবনে অন...        bangla\n154674          মাশাল্লাহ অসাধারণ খুব খুব সুন্দর লাগতেছে         bangla\n154675   ক্লাসরুমে এসব কি করে দেখুন।বন্ধু বলে সব করত দ...        bangla\n154676  Sudho ki tai koto guli armi Mara gese tar hisa...  anglo-bangla\n\n[154677 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>language</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Tmr barite barate asa kono loker kisu jodi tm...</td>\n      <td>anglo-bangla</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>আপনাদের যদি প্রশ্ন করা হয়। সে প্রশ্নের উত্তর ...</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Some choices are better than others and we, as...</td>\n      <td>english</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>আজ তারিখের প্রথম আলো পত্রিকা কি এর বিজ্ঞাপন এ...</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>আমাদের দেশে পাইলে বুঝায় দিতাম বাংঙ্গালী কি জি...</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>154672</th>\n      <td>ami to taim e bolte parina</td>\n      <td>anglo-bangla</td>\n    </tr>\n    <tr>\n      <th>154673</th>\n      <td>এই মাগীডারে ভালো ভেবেছিলাম জানতাম সে জীবনে অন...</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>154674</th>\n      <td>মাশাল্লাহ অসাধারণ খুব খুব সুন্দর লাগতেছে</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>154675</th>\n      <td>ক্লাসরুমে এসব কি করে দেখুন।বন্ধু বলে সব করত দ...</td>\n      <td>bangla</td>\n    </tr>\n    <tr>\n      <th>154676</th>\n      <td>Sudho ki tai koto guli armi Mara gese tar hisa...</td>\n      <td>anglo-bangla</td>\n    </tr>\n  </tbody>\n</table>\n<p>154677 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 125,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "final_dataset = pd.concat([bangla_dataset[0:70000],  banglish_dataset, english_dataset1, english_dataset2,english_quotes, english_dataset4])\n",
+    "final_dataset = final_dataset.sample(frac=1)\n",
+    "final_dataset.reset_index(drop=True, inplace=True)\n",
     "final_dataset"
    ],
    "metadata": {
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 135,
    "outputs": [],
    "source": [
     "final_dataset.drop_duplicates()\n",
